user and pantry collections are routed and have crud

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "mern",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -25,5 +24,14 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brittanymorrisdesign/Group-Project-3.git"
+  },
+  "bugs": {
+    "url": "https://github.com/brittanymorrisdesign/Group-Project-3/issues"
+  },
+  "homepage": "https://github.com/brittanymorrisdesign/Group-Project-3#readme",
+  "description": ""
 }
