config changes for db

--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.1",
+    "if-env": "^1.0.4",
     "jquery": "^3.4.1",
     "mysql": "^2.18.1",
     "mysql2": "^1.7.0",
     "nodemon": "^2.0.3",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "per-env": "^1.0.2",
     "proxy": "^1.0.1",
