--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemon": "^2.0.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "per-env": "^1.0.2",
     "proxy": "^1.0.1",
     "sequelize": "^5.21.7"
