--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "concurrently": "^5.1.0",
+    "concurrently": "^5.2.0",
     "cross-env": "^5.2.0",
     "mocha": "^7.1.2",
     "prettier": "^1.13.7"
@@ -29,6 +29,7 @@
     "concurrent": "^0.3.2",
     "dotenv": "^8.2.0",
     "env": "0.0.2",
+    "eslint": "^6.8.0",
     "express": "^4.17.0",
     "express-session": "^1.16.1",
     "if-env": "^1.0.4",
