--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "path": "^0.12.7",
     "per-env": "^1.0.2",
     "proxy": "^1.0.1",
+    "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.7"
   },
   "repository": {
