--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "proxy": "^1.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-toastify": "^5.5.0",
     "sequelize": "^5.21.7"
   },
   "repository": {
